--- a/src/main/resources/templates/employee/employee-detail.html
+++ b/src/main/resources/templates/employee/employee-detail.html
@@ -225,11 +225,11 @@
                 </div>
             </div>
             <!--Current Working Place Details-->
-            <div class="container-fluid bg-dark formBorder">
+            <!--<div class="container-fluid bg-dark formBorder">
                 <h3 class="control-label">Current Working Place Details</h3>
                 <div class="col-sm-12 flex-column">
                     <div class="row">
-                        <!--Left Side-->
+                        &lt;!&ndash;Left Side&ndash;&gt;
                         <div class="form-group col-md-6 col-sm-6 text-left flex-column">
                             <div class="form-row text-right">
                                 <div class="col-md-4">
@@ -291,7 +291,7 @@
                                     <p id="employeeWorkingPlaceAddress" class="display_detail" th:utext="${employeeDetail.workingPlace.address}"></p>
                                 </div>
                             </div>
-                        </div>
+                        </div>-->
                         <!--Right Side-->
                         <div class="form-group col-md-6 col-sm-6 text-right flex-column">
                             <div class="form-row text-right">
@@ -358,7 +358,7 @@
                     </div>
                 </div>
             </div>
-            <!--images-->
+            <!--img-->
             <div class="form-group col-md-12 col-sm-12 text-left flex-column ">
                 <div class="col" id="photoDetails">
                     <div>
@@ -372,7 +372,7 @@
                                         <div class="card-body">
                                             <img id="img" class="rounded"
                                                  style="height: 150px; width: 150px; border-radius: 10px"
-                                                 alt="Employee images" th:src="${file.url}"/>
+                                                 alt="Employee img" th:src="${file.url}"/>
                                         </div>
                                         <div class="card-footer bg-secondary text-light text-center">
                                             <p id="imgName" th:text="${file.filename}"></p>
