--- a/src/main/resources/templates/mainWindow.html
+++ b/src/main/resources/templates/mainWindow.html
@@ -9,8 +9,8 @@
 
 <div class="container-fluid">
     <div class="main-section">
-        <p class="welcome-Notes">Welcome To Complaint Management System of Department of
-                                 Excise</p>
+        <p class="welcome-Notes">Welcome To Rehabilitation Officer Administration of Department of
+                               Prisons  </p>
         <div class="col-12">
             <div class="row">
                 <div class="col-7">
