--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -7,7 +7,7 @@
                 <strong>
                     <i>
                         <a href="#" target="_blank">
-                            &copy; &nbsp;<span id="currentYear"></span> &nbsp; W3Academy
+                            &copy; &nbsp;<span id="currentYear"></span> &nbsp; Department Of Prisons
                         </a>
                     </i>
                 </strong>
