--- a/src/main/resources/templates/institute/institute-detail.html
+++ b/src/main/resources/templates/institute/institute-detail.html
@@ -46,23 +46,43 @@
                         <p id="id" th:text="${instituteDetail.id}" class="display_detail"></p>
                     </div>
                 </div>
-                <!--Main Category-->
+                <!--Prison Type-->
                 <div class="form-row text-right">
                     <div class="col-md-4">
                         <label class="control-label" for="mainCategory">Main Category :</label>
                     </div>
                     <div class="col-md-4">
-                        <p id="mainCategory" th:text="${instituteDetail.mainCategory.mainCategory}"
+                        <p id="mainCategory" th:text="${instituteDetail.prisonType.prisonType}"
                            class="display_detail"></p>
                     </div>
                 </div>
                 <!--Name-->
                 <div class="form-row text-right">
                     <div class="col-md-4">
-                        <label class="control-label" for="name">Name :</label>
+                        <label class="control-label" >Name :</label>
                     </div>
                     <div class="col-md-4">
-                        <p id="name" th:text="${instituteDetail.name}"
+                        <p th:text="${instituteDetail.name}"
+                           class="display_detail"></p>
+                    </div>
+                </div>
+                <!--Land-->
+                <div class="form-row text-right">
+                    <div class="col-md-4">
+                        <label class="control-label" >Land :</label>
+                    </div>
+                    <div class="col-md-4">
+                        <p th:text="${instituteDetail.land}"
+                           class="display_detail"></p>
+                    </div>
+                </div>
+                <!--Email-->
+                <div class="form-row text-right">
+                    <div class="col-md-4">
+                        <label class="control-label" >Email :</label>
+                    </div>
+                    <div class="col-md-4">
+                        <p th:text="${instituteDetail.email}"
                            class="display_detail"></p>
                     </div>
                 </div>
@@ -71,7 +91,7 @@
     </div>
     <!--Back Button-->
     <div class="form-group col-md-12 col-sm-12 text-center flex-column ">
-        <a href="/category">
+        <a href="/institute">
             <button class="btn btn-dark" type="button" tabindex="10">
                 <i class="fas fa-arrow-circle-left" style="font-size: 20px"></i>&nbsp; &nbsp;Back
             </button>
