--- a/src/main/resources/templates/offence/offence.html
+++ b/src/main/resources/templates/offence/offence.html
@@ -2,7 +2,7 @@
 <html lang="en" >
 <head data-th-replace="~{fragments/header :: headerFragment}">
     <meta charset="UTF-8">
-    <title>punishment</title>
+    <title>offence</title>
 </head>
 <body>
 <nav data-th-replace="~{fragments/navBar :: navBarFragment}"></nav>
@@ -12,19 +12,19 @@
     <div class="row text-center formManagement border-info">
         <!-- New Institute Button-->
         <div class="col">
-            <a class="btn btn-success" href="/punishment/add"><i class="fa fa-user-plus" style="font-size: 20px"></i>&nbsp;&nbsp;New</a>&nbsp;
+            <a class="btn btn-success" href="/offence/add"><i class="fa fa-user-plus" style="font-size: 20px"></i>&nbsp;&nbsp;New</a>&nbsp;
         </div>
         <!-- List Name-->
         <div class="col">
             <h2 class="text-light text-center">
                 <strong>
-                    Institute Management
+                    Offence Management
                 </strong>
             </h2>
         </div>
         <!-- Home Button-->
         <div class="col">
-            <a href="/punishment/workingPlace" id="searchShow" class="btn btn-primary">
+            <a href="/offence" id="searchShow" class="btn btn-primary">
             <!--<i class="fa fa-user " style="font-size: 20px"></i>-->
                 <i class="fas fa-home" style="font-size: 20px"></i>&nbsp;&nbsp;Home
                 &nbsp;
@@ -35,31 +35,24 @@
 <div class="container-fluid bg-info formBorder text-center">
     <!--Table view-->
     <div class="col">
-        <div class="col" id="instituteListPresent" data-th-if="${not #lists.isEmpty(institutes)}">
+        <div class="col" id="instituteListPresent" data-th-if="${not #lists.isEmpty(offences)}">
             <table class="table table-hover table-striped" id="myTable">
                 <thead>
                     <tr>
                         <th> Index</th>
-                        <th> Name</th>
-                        <th> Land</th>
-                        <th> Email</th>
-                        <th> Prison Type</th>
-                        <th> Address</th>
+                        <th> Type</th>
+                        <th> Description</th>
                         <th> Modify</th>
                     </tr>
                 </thead>
                 <tbody>
-                    <tr data-th-each="punishment, rowCount : ${institutes}">
+                    <tr data-th-each="offence, rowCount : ${offences}">
                         <th data-th-text="${rowCount.count}"></th>
-                        <th data-th-text="${punishment.name}"></th>
-                        <th data-th-text="${punishment.land}"></th>
-                        <th data-th-text="${punishment.email}"></th>
-                        <th data-th-text="${punishment.prisonType.prisonType}"></th>
-                        <th data-th-text="${punishment.address}"></th>
+                        <th data-th-text="${offence.offenceType.offenceType}"></th>
+                        <th data-th-text="${offence.name}"></th>
                         <th>
-                            <a id="instituteView" data-th-href="${'/punishment/' + punishment.id}" class="btn btn-primary btn-sm"><i class="fa fa-folder-open" style="font-size: 15px"></i>&nbsp;View</a>
-                            <a id="instituteEdit" data-th-href="${'/punishment/edit/' + punishment.id}" class="btn btn-success btn-sm"><i class="fa fa-edit" style="font-size: 15px"></i>&nbsp;Edit</a>
-                            <a id="instituteRemove" data-th-href="${'/punishment/remove/' + punishment.id}" class="btn btn-danger btn-sm">
+                            <a  data-th-href="${'/offence/edit/' + offence.id}" class="btn btn-success btn-sm"><i class="fa fa-edit" style="font-size: 15px"></i>&nbsp;Edit</a>
+                            <a  data-th-href="${'/offence/remove/' + offence.id}" class="btn btn-danger btn-sm">
                              <!-- data-th-if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}"--> <i class="fa fa-trash" style="font-size: 15px"></i> Delete</a>
                         </th>
                     </tr>
@@ -68,14 +61,14 @@
         </div>
     </div>
     <!--Error-->
-    <div class="row" data-th-if="${ #lists.isEmpty(institutes)}">
+    <div class="row" data-th-if="${ #lists.isEmpty(offences)}">
         <div class="col-sm-12">
             <div class="alert alert-warning alert-dismissible fade show" role="alert">
                 <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
                 <h3 class="text-center text-danger">
-                    <strong>There is no punishment upto now please add punishment to the system using "New" button.</strong>
+                    <strong>There is no offence upto now please add offence to the system using "New" button.</strong>
                 </h3>
             </div>
         </div>
