main window changes

--- a/src/main/resources/templates/mainWindow.html
+++ b/src/main/resources/templates/mainWindow.html
@@ -43,12 +43,12 @@
                                                 <div class="count"><i class="fa fa-shopping-cart"
                                                                       aria-hidden="true"></i>
                                                 </div>
-                                                <div class="title">Petitions</div>
+                                                <div class="title">Compensation and censures Managment</div>
                                             </div>
                                         </div>
                                         <a href="/petition">
                                             <div class="body">
-                                                <div class="title">Inspect Petitions</div>
+                                                <div class="title"> Compensation and censures Managmen</div>
                                             </div>
                                         </a>
                                     </div>
@@ -63,13 +63,13 @@
                                             <div class="">
                                                 <div class="count"><i class="fa fa-newspaper" aria-hidden="true"></i>
                                                 </div>
-                                                <div class="title">Crime</div>
+                                                <div class="title">skills and training Mangment</div>
                                             </div>
 
                                         </div>
                                         <a href="/crime">
                                             <div class="body">
-                                                <div class="title">Observe Crimes</div>
+                                                <div class="title">skills and training Mangment</div>
                                             </div>
                                         </a>
                                     </div>
@@ -87,7 +87,7 @@
                                                 <div class="count"><i class="fa fa-universal-access"
                                                                       aria-hidden="true"></i>
                                                 </div>
-                                                <div class="title">Offenders</div>
+                                                <div class="title">Performance apprecial</div>
                                             </div>
 
                                         </div>
