--- a/src/main/resources/templates/mainWindow.html
+++ b/src/main/resources/templates/mainWindow.html
@@ -7,6 +7,8 @@
 <body>
 <nav th:replace="~{fragments/navBar :: navBarFragment}"></nav>
 
+
+<img class="wave" src="../img/mainwindow_bg_01.jpg">
 <div class="container-fluid">
     <div class="main-section">
         <p class="welcome-Notes">Welcome To Rehabilitation Officer Administration of Department of
