Employee module was recreated.

--- a/src/main/resources/templates/employee/employee.html
+++ b/src/main/resources/templates/employee/employee.html
@@ -41,7 +41,7 @@
 
    <!-- <div class="col-md-1"></div>-->
 
-    <div class="col-md-8  bg-dark formBorder text-center">
+    <div class="col-md-8  text-center">
         <div class="col">
             <div class="col" id="employeeListPresent" th:if="${not #lists.isEmpty(employees)}">
                 <table class="table table-hover table-striped" id="myTable">
