--- a/src/main/resources/templates/employee/employee-detail.html
+++ b/src/main/resources/templates/employee/employee-detail.html
@@ -8,34 +8,35 @@
 <nav data-th-replace="~{fragments/navBar :: navBarFragment}"></nav>
 
 <!--heading Area-->
-<div class="container-fluid bg-secondary form-Border">
+<div class="container-fluid  form-Border">
     <div class="row text-center formManagement border-info">
         <div class="col">
-            <a class="btn btn-primary" href="/home">
-                <i class="fa fa-home" style="font-size: 20px"></i> &nbsp; Home
+            <a class="btn btn-outline-info" href="/home">&nbsp; Back To Home
             </a>
         </div>
+
         <div class="col">
-            <h4 class="text-light text-center">
+            <a href="/employee" class="btn btn-info">View Employees
+            </a>
+        </div>
+    </div>
+    <div>
+        <div class="col">
+            <h4 class="text-info text-center">
                 <strong>
                     <p data-th-text="${employeeDetail.title.title} +${' '} +${employeeDetail.name}"></p>
                 </strong>
             </h4>
         </div>
-        <div class="col">
-            <a href="/employee" class="btn btn-primary">
-                <i class="fa fa-list"></i>&nbsp; View List
-            </a>
-        </div>
     </div>
 </div>
 <!--details-->
-<div data-th-fragment="employeeDetailsFragment" class="container-fluid ">
-    <div class="col-sm-12 flex-column ">
+<div data-th-fragment="employeeDetailsFragment" class="container-fluid formBorder">
+    <div class="col-sm-12 flex-column text-dark">
         <div class="row">
             <!--Left Side-->
-            <div class="form-group col-md-6 col-sm-6 text-left flex-column">
-                <div class="form-row text-right">
+            <div class="form-group col-md-6 col-sm-6 flex-column">
+                <div class="form-row text-right ">
                     <div class="col-md-4">
                         <label class="control-label" for="id">ID :</label>
                     </div>
@@ -45,19 +46,13 @@
                 </div>
                 <div class="form-row text-right">
                     <div class="col-md-4">
-                        <label class="control-label" for="payRoleNumber">Pay Role No :</label>
+                        <label class="control-label" for="employeeCode">Employee Id :</label>
                     </div>
                     <div class="col-md-8">
-                        <p id="payRoleNumber" data-th-text="${employeeDetail.payRoleNumber}" class="display_detail"></p>
+                        <p id="employeeCode" data-th-text="${employeeDetail.code}" class="display_detail"></p>
                     </div>
                 </div>
-                <div class="form-row text-right">
-                    <div class="col-md-4">
-                        <label class="control-label" for="departmentIdNumber">Depart Id No :</label>
-                    </div>
-                    <div class="col-md-8">
-                        <p id="departmentIdNumber" data-th-text="${employeeDetail.departmentIdNumber}" class="display_detail"></p></div>
-                </div>
+
                 <div class="form-row text-right">
                     <div class="col-md-4">
                         <label class="control-label" for="name">Name :</label>
@@ -98,15 +93,7 @@
                         <p id="dateOfBirth" data-th-text="${employeeDetail.dateOfBirth}" class="display_detail">Error Birthday</p>
                     </div>
                 </div>
-                <div class="form-row text-right">
-                    <div class="col-md-4">
-                        <label class="control-label" for="bloodGroup">Blood Group :</label>
-                    </div>
-                    <div class="col-md-8">
-                        <p id="bloodGroup" data-th-text="${employeeDetail.bloodGroup.bloodGroup}" class="display_detail">
-                        </p>
-                    </div>
-                </div>
+
                 <div class="form-row text-right">
                     <div class="col-md-4">
                         <label class="control-label" for="designation">Designation :</label>
@@ -139,7 +126,7 @@
                     <div class="col-md-4">
                         <label class="control-label" for="address">Address :</label>
                     </div>
-                    <div class="col-md-8 text-left">
+                    <div class="col-md-8 text-right">
                         <p id="address" class="display_detail " data-th-utext="${employeeDetail.address}"></p>
                     </div>
                 </div>
@@ -167,14 +154,14 @@
                         <p id="land" data-th-text="${employeeDetail.land}" class="display_detail"></p>
                     </div>
                 </div>
-                <div class="form-row text-right">
+                <!--<div class="form-row text-right">
                     <div class="col-md-4">
                         <label class="control-label" for="email">Email :</label>
                     </div>
                     <div class="col-md-8">
                         <p id="email" data-th-text="${employeeDetail.email}" class="display_detail"></p>
                     </div>
-                </div>
+                </div>-->
                 <div class="form-row text-right">
                     <div class="col-md-4">
                         <label class="control-label" for="officeEmail">Office Email :</label>
@@ -224,141 +211,8 @@
                     </div>
                 </div>
             </div>
-            <!--Current Working Place Details-->
-            <!--<div class="container-fluid ">
-                <h3 class="control-label">Current Working Place Details</h3>
-                <div class="col-sm-12 flex-column">
-                    <div class="row">
-                        &lt;!&ndash;Left Side&ndash;&gt;
-                        <div class="form-group col-md-6 col-sm-6 text-left flex-column">
-                            <div class="form-row text-right">
-                                <div class="col-md-4">
-                                    <label class="control-label" for="employeeWorkingPlaceName">Name :</label>
-                                </div>
-                                <div class="col-md-8">
-                                    <p id="employeeWorkingPlaceName" data-th-text="${employeeDetail.workingPlace.name}" class="display_detail"></p>
-                                </div>
-                            </div>
-                            <div class="form-row text-right">
-                                <div class="col-md-4">
-                                    <label class="control-label" for="employeeWorkingPlaceCode">Code :</label>
-                                </div>
-                                <div class="col-md-8">
-                                    <p id="employeeWorkingPlaceCode" data-th-text="${employeeDetail.workingPlace.code}" class="display_detail"></p>
-                                </div>
-                            </div>
-                            <div class="form-row text-right">
-                                <div class="col-md-4">
-                                    <label class="control-label" for="employeeWorkingPlaceProvince">Province :</label>
-                                </div>
-                                <div class="col-md-8">
-                                    <p id="employeeWorkingPlaceProvince" data-th-text="${employeeDetail.workingPlace.province.province}" class="display_detail">
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="form-row text-right">
-                                <div class="col-md-4">
-                                    <label class="control-label" for="employeeWorkingPlaceWorkingPlaceType">Working
-                                                                                                            Place Type
-                                                                                                            :</label>
-                                </div>
-                                <div class="col-md-8">
-                                    <p id="employeeWorkingPlaceWorkingPlaceType" data-th-text="${employeeDetail.workingPlace.workingPlaceType.workingPlaceType}" class="display_detail">
-                                    </p>
-                                </div>
-                            </div>
-                            <div class="form-row text-right">
-                                <div class="col-md-4">
-                                    <label class="control-label" for="employeeWorkingPlaceEmailOne">Email One :</label>
-                                </div>
-                                <div class="col-md-8">
-                                    <p id="employeeWorkingPlaceEmailOne" class="display_detail" data-th-text="${employeeDetail.workingPlace.emailOne}"></p>
-                                </div>
-                            </div>
-                            <div class="form-row text-right">
-                                <div class="col-md-4">
-                                    <label class="control-label" for="employeeWorkingPlaceEmailTwo">Email Two :</label>
-                                </div>
-                                <div class="col-md-8">
-                                    <p id="employeeWorkingPlaceEmailTwo" class="display_detail" data-th-text="${employeeDetail.workingPlace.emailTwo}"></p>
-                                </div>
-                            </div>
-                            <div class="form-row text-right">
-                                <div class="col-md-4">
-                                    <label class="control-label" for="employeeWorkingPlaceAddress">Address :</label>
-                                </div>
-                                <div class="col-md-8">
-                                    <p id="employeeWorkingPlaceAddress" class="display_detail" data-th-utext="${employeeDetail.workingPlace.address}"></p>
-                                </div>
-                            </div>
-                        </div>-->
-                        <!--Right Side-->
-                        <div class="form-group col-md-6 col-sm-6 text-right flex-column">
-                            <div class="form-row text-right">
-                                <div class="col-md-4">
-                                    <label class="control-label" for="employeeWorkingPlaceLandOne">Land No One:</label>
-                                </div>
-                                <div class="col-md-8">
-                                    <p id="employeeWorkingPlaceLandOne" class="display_detail land" data-th-text="${employeeDetail.workingPlace.landOne}"></p>
-                                </div>
-                            </div>
-                            <div class="form-row text-right">
-                                <div class="col-md-4">
-                                    <label class="control-label" for="employeeWorkingPlaceLandTwo">Land No Two:</label>
-                                </div>
-                                <div class="col-md-8">
-                                    <p id="employeeWorkingPlaceLandTwo" class="display_detail land" data-th-text="${employeeDetail.workingPlace.landTwo}"></p>
-                                </div>
-                            </div>
-                            <div class="form-row text-right">
-                                <div class="col-md-4">
-                                    <label class="control-label " for="employeeWorkingPlaceLandThree">Land No Three
-                                                                                                      :</label>
-                                </div>
-                                <div class="col-md-8">
-                                    <p id="employeeWorkingPlaceLandThree" class="display_detail land" data-th-text="${employeeDetail.workingPlace.landThree}"></p>
-                                </div>
-                            </div>
-                            <div class="form-row text-right">
-                                <div class="col-md-4">
-                                    <label class="control-label" for="employeeWorkingPlaceLandFour">Land No Four
-                                                                                                    :</label>
-                                </div>
-                                <div class="col-md-8">
-                                    <p id="employeeWorkingPlaceLandFour" class="display_detail land" data-th-text="${employeeDetail.workingPlace.landFour}"></p>
-                                </div>
-                            </div>
-                            <div class="form-row text-right">
-                                <div class="col-md-4">
-                                    <label class="control-label" for="employeeWorkingPlaceFaxNumber">Fax No :</label>
-                                </div>
-                                <div class="col-md-8">
-                                    <p id="employeeWorkingPlaceFaxNumber" class="display_detail land" data-th-text="${employeeDetail.workingPlace.faxNumber}"></p>
-                                </div>
-                            </div>
-                            <div id="createdByDiv" class="form-row text-right">
-                                <div class="col-md-4">
-                                    <label class="control-label" for="employeeWorkingPlaceCreatedBy">Created By
-                                                                                                     :</label>
-                                </div>
-                                <div class="col-md-8">
-                                    <p id="employeeWorkingPlaceCreatedBy" class="display_detail" data-th-text="${employeeDetail.workingPlace.createdBy}"></p>
-                                </div>
-                            </div>
-                            <div class="form-row text-right" id="createdAtDiv">
-                                <div class="col-md-4">
-                                    <label class="control-label" for="employeeWorkingPlaceCreatedAt">Created At
-                                                                                                     :</label>
-                                </div>
-                                <div class="col-md-8">
-                                    <p id="employeeWorkingPlaceCreatedAt" class="display_detail" data-th-text="${#temporals.format(employeeDetail.workingPlace.createdAt, 'dd-MM-yyyy HH:mm')}"></p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <!--img-->
+
+            <!--images-->
             <div class="form-group col-md-12 col-sm-12 text-left flex-column ">
                 <div class="col" id="photoDetails">
                     <div>
@@ -371,8 +225,8 @@
                                     <div class="card text-center">
                                         <div class="card-body">
                                             <img id="img" class="rounded"
-                                                 style="height: 150px; width: 150px; border-radius: 10px"
-                                                 alt="Employee img" data-th-src="${file.url}"/>
+                                                 style="height: 150px; widdata-th- 150px; border-radius: 10px"
+                                                 alt="Employee images" data-th-src="${file.url}"/>
                                         </div>
                                         <div class="card-footer bg-secondary text-light text-center">
                                             <p id="imgName" data-th-text="${file.filename}"></p>
@@ -388,44 +242,12 @@
                 </div>
             </div>
         </div>
-        <!--Working Place History Details show-->
-        <div class="container-fluid text-center " data-th-if="${not #lists.isEmpty(employeeDetail.employeeWorkingHistories)}" id="workingPlaceHistoryDetails">
-            <div class="col-sm-12 flex-column ">
-                <div class="header ">
-                    <h3><strong><span id="captionEmployeeName" data-th-text="${employeeDetail.title.title} +${' '} +${employeeDetail.name}"></span>'s Working History</strong></h3>
-                </div>
-                <table class="table table-striped table-inverse table-responsive">
-                    <thead class="thead-inverse">
-                    <tr>
-                        <th>Working Place Name</th>
-                        <th>From</th>
-                        <th>To</th>
-                        <th>Duration</th>
-                        <th>Transfer Reason</th>
-                        <th>Remark</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr data-th-each="workingPlaceHistory : ${employeeDetail.employeeWorkingHistories}" class="text-left text-light">
-                        <td data-th-text="${workingPlaceHistory.workingPlace.name}" scope="row"></td>
-                        <td data-th-text="${workingPlaceHistory.from_place}"></td>
-                        <td data-th-text="${workingPlaceHistory.to_place}"></td>
-                        <td data-th-text="${workingPlaceHistory.workingDuration}"></td>
-                        <td data-th-text="${workingPlaceHistory.workingPlaceChangeReason.workingPlaceChangeReason}"></td>
-                        <td data-th-text="${workingPlaceHistory.remark}"></td>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
-        </div>
-        <!--Detection team details show-->
 
-        <!--his contribution for petition details-->
     </div>
     <div class="form-group col-md-12 col-sm-12 text-center flex-column ">
         <a href="/employee">
-            <button class="btn btn-success" type="button" tabindex="10">
-                <i class="fa fa-backward " style="font-size: 20px"></i>&nbsp; &nbsp;Back
+            <button class="btn btn-outline-secondary" type="button" tabindex="10">
+                <i class="fa fa-arrow-circle-left " style="font-size: 20px"></i>&nbsp; &nbsp;Back
             </button>
         </a>
     </div>
