Qualification frontend was updated

--- a/src/main/resources/templates/mainWindow.html
+++ b/src/main/resources/templates/mainWindow.html
@@ -271,7 +271,7 @@
             </section>
 
 
-            <!-- Leave Managment-->
+            <!-- EmployeeLeave Managment-->
 
 
             <section id="tm-section-4" class="tm-section tm-section-carousel">
@@ -309,7 +309,7 @@
             </section>
 
 
-            <!-- Leave Managment-->
+            <!-- EmployeeLeave Managment-->
 
 
             <section id="tm-section-5" class="tm-section tm-section-carousel">
